tests/ui/06-fail-bitfield-fields-visibility.stderr
error[E0624]: associated function `set_test` is private
  --> tests/ui/06-fail-bitfield-fields-visibility.rs:17:10
   |
7  | /     bitfield! {
8  | |         pub struct Test(u8);
9  | |         u8, test, set_test: 3, 0;
10 | |     }
   | |_____- private associated function defined here
...
17 |       test.set_test(0xF);
   |            ^^^^^^^^ private associated function
